<resources>
    <string name="app_name">PolyRide</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="text">Enter Text</string>
    <string name="Facebook">Connect With Facebook</string>
    <string name="Google">Connect With Google</string>
    <string name="signup_button">Sign Up With Email</string>
    <string name="Login">Already a User?</string>
    <string name="Create">Create An Account</string>
    <string name="First">First Name</string>
    <string name="Last">Last Name</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="Sign_Up">Sign Up</string>
    <string name="Terms">By signing up, you agree to the Terms of Service</string>
    <string name="Account">Already Have an Account?</string>
    <string name="Create2">Profile</string>
    <string name="title_activity_notifications">Notifications</string>
    <string name="title_activity_notif">Notif</string>
    <string name="textview">TextView</string>
    <string name="title_activity_better_rides">BetterRides</string>
    <string name="Login_1">Login</string>

</resources>
